--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -13,6 +13,37 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "! git clone https://github.com/DS3001/wrangling"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rxJhRfvZQ-J-",
+        "outputId": "10d1d7c3-c816-4ea4-9558-f06e78f646d0"
+      },
+      "id": "rxJhRfvZQ-J-",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'wrangling'...\n",
+            "remote: Enumerating objects: 92, done.\u001b[K\n",
+            "remote: Counting objects: 100% (52/52), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (34/34), done.\u001b[K\n",
+            "remote: Total 92 (delta 42), reused 18 (delta 18), pack-reused 40 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (92/92), 18.08 MiB | 4.49 MiB/s, done.\n",
+            "Resolving deltas: 100% (43/43), done.\n",
+            "Updating files: 100% (21/21), done.\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "5735a4d4-8be8-433a-a351-70eb8002e632",
       "metadata": {
@@ -30,6 +61,29 @@
         "  7. Why, specifically, is table 11 messy but table 12 tidy and \"molten\"?\n",
         "  8. Read Section 6. What is the \"chicken-and-egg\" problem with focusing on tidy data? What does Wickham hope happens in the future with further work on the subject of data wrangling?"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. This paper is about how to make data tidying easy and effective so that we may manipulate, model, and visualize the data. It talks about a framework and structure that will tidy datasets and create a consistent data structure.\n",
+        "2. \"The tidy data standard has been designed to facilitate initial exploration and analysis of the data, and to simplify the developments of data analysis tools that work well together.\"\n",
+        "3. Tidy datasets are easy to work with since they follow a standard structure, while messy datasets are not the same across the board. They are messy and differ from other messy datasets, thus it is difficult to work with multiple of them. The other sentence basically means that its easy to read datasets, but its difficult to understand exactly what the variables/observations actually mean. An example would be a variable like num_steps (or something). You can read it and think it represents the number of steps a person took in a day, when it might actually mean the number of steps taken in a year (this might not be the best example to convey what I mean, but this is the only example I can think of at the moment).\n",
+        "4. Values are quantitative (numbers) or qualitative (strings) that make up a dataset. Every value belongs to a variable and an observation. A variable is all values that measure the same underlying attribute across units. An observation is all the values measured on the same unit.\n",
+        "5. Tidy data is essentially a standard way of mapping the meaning of a dataset to its structure. So, each variable is a column and each observation is a row. Each observational unit forms a table.\n",
+        "6. 5 most common problems with messy datasets include:\n",
+        "- column headers are values, not variable names\n",
+        "- multiple variables are stored in one column\n",
+        "- variables are stored in both rows and columns\n",
+        "- multiple types of observational units are stored in the same table\n",
+        "- a single observational unit is stored in multiple tables\n",
+        "The data in table 4 is messy since the column headers show the income values, but it is not explicitly shown as the variable income. Melting a dataset is this process of converting column-value variable into rows.\n",
+        "7. Table 11 is messy since it has values of days along the top. Table 12 melts those days into a single variable of date. The element variable has variable names tmax and tmin, which are not values thus, its still not tidy.\n",
+        "8. The \"chicken-and-egg\" problem with tidy data is: if tidy data is only as useful as the tools that work with it, then tidy tools will be inextricably linked to tidy data. In the future, Wickham \"hopes to use methodologies from these fields to improve our understanding of the cognitive side of data analysis, and to further improve our ability to design appropriate tools.\"\n"
+      ],
+      "metadata": {
+        "id": "5GpIfZzhRGgm"
+      },
+      "id": "5GpIfZzhRGgm"
     },
     {
       "cell_type": "markdown",
